[Back end] -> Create entrypoints

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Liste des utilisateurs</title>
 </head>
 <body>
-    <h1>Bonjour le Monde !</h1>
+    <h1>Utilisateurs</h1>
+    <ul id="user-list"></ul>
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
+
