[TRANSCENDANCE] -> ADDED hot reload to nginx

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>Liste des utilisateurs</title>
 </head>
 <body>
-    <h1>Utilisateurs</h1>
+    <h1>Utiliswefweateurs</h1>
     <ul id="user-list"></ul>
 
     <script src="script.js"></script>
