add tailwind / add prop class in pongNode components

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mon App TS</title>
-  <style>
-    .home { max-width: 800px; margin: 0 auto; padding: 20px; }
-    button { padding: 8px 16px; margin: 5px; }
-    nav { background: #f0f0f0; padding: 10px; }
-  </style>
+  <link href="/index.css" rel="stylesheet">
 </head>
 <body>
   <div id="app"></div>
