--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mon App TS</title>
-  <link href="/index.css" rel="stylesheet">
+  <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
   <div id="app"></div>
