--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Mon App TS</title>
-
+	<link href="styles/index.css" rel="stylesheet">
     <!-- Nouvelle API Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
