add profile component

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
 
   <head>
 	<meta charset="UTF-8" />
-	<title>Mon App TS</title>
+	<title>Transcendence</title>
 	<link href="styles/index.css" rel="stylesheet">
 	<!-- Nouvelle API Google Identity Services -->
 	<script src="https://accounts.google.com/gsi/client" async defer></script>
